# py-bootstrap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini
docs/: conf.py  index.rst
docs/modules/: py_bootstrap.base.operations.base.rst  py_bootstrap.base.operations.recursive_container.rst  py_bootstrap.base.operations.rst  py_bootstrap.base.operations.runner.rst  py_bootstrap.base.rst  py_bootstrap.files_processors.base.rst  py_bootstrap.files_processors.copy.rst  py_bootstrap.files_processors.generate.rst  py_bootstrap.files_processors.rst  py_bootstrap.operations.base.rst  py_bootstrap.operations.build_bootstrap.rst  py_bootstrap.operations.dispatcher.rst  py_bootstrap.operations.export_bootstrap.rst  py_bootstrap.operations.list_bootstraps.rst  py_bootstrap.operations.register_bootstrap.rst  py_bootstrap.operations.rst  py_bootstrap.rst  py_bootstrap.scripts.bootstrap.rst  py_bootstrap.scripts.rst  py_bootstrap.templates.rst
package/: AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml
package/<boostrap-dir>/: __init__.py
package/<boostrap-dir>/tests/: test_package.py
package/docs/: conf.py  index.rst
py_bootstrap/: __init__.py
py_bootstrap/base/: operations.py
py_bootstrap/base/operations/: __init__.py  base.py  recursive_container.py  runner.py
py_bootstrap/files_processors/: __init__.py  base.py  copy.py  generate.py
py_bootstrap/operations/: __init__.py  base.py  build_bootstrap.py  dispatcher.py  export_bootstrap.py  list_bootstraps.py  register_bootstrap.py
py_bootstrap/scripts/: bootstrap.py
py_bootstrap/templates/: __init__.py
py_bootstrap/templates/application/: CHANGELOG.md.tmpl  README.md.tmpl  __entry_point__.py  __metadata__.py  pyproject.toml.tmpl  requirements-dev.txt  tox.ini.tmpl
py_bootstrap/templates/application/docs/: conf.py.tmpl  index.rst.tmpl
py_bootstrap/templates/application/tests/: test_app.py.tmpl  test_package.py.tmpl
py_bootstrap/templates/application/{dir_name}/: __init__.py.tmpl
py_bootstrap/templates/application/{underscored_name}/: __init__.py.tmpl
py_bootstrap/templates/bootstrap/: __entry_point__.py  __entry_point__.py.tmpl  demo-file.txt.tmpl.tmpl
py_bootstrap/templates/package/: AUTHORS.md.tmpl  CHANGELOG.md.tmpl  README.md.tmpl  __entry_point__.py  __metadata__.py  pyproject.toml.tmpl  tox.ini.tmpl  {empty}.pre-commit-config.yaml.tmpl
py_bootstrap/templates/package/docs/: conf.py.tmpl
py_bootstrap/templates/package/tests/: test_package.py.tmpl
py_bootstrap/templates/package/{dir_name}/: __init__.py.tmpl
py_bootstrap/templates/template/: __metadata__.py  {empty}__metadata__.py.tmpl
tests/: test_package.py
tests/base/: test_operations.py
tests/base/operations/: test_base.py  test_recursive_container.py
tests/operations/: test_build_bootstrap.py  test_export_bootstrap.py  test_list_bootstraps.py  test_register_bootstrap.py
tests/scripts/: test_bootstrap.py
tests/templates/test_bootstrap/: __metadata__.py
tests/templates/test_bootstrap/{key_dir}/: some-file.txt.tmpl
tests/templates/test_wrong_metadata_description/: __metadata__.py
tests/tst-register-bootstrap-source/: __entry_point__.py
tests/tst-templates/test_bootstrap/: __entry_point__.py
tests/tst_templates/: __init__.py
tests/tst_templates/test_bootstrap/{python_name}/: generated-file.txt.tmpl
tests/tst_templates/test_bootstrap/{underscored_name}/: generated-file.txt.tmpl
tests/tst_templates/test_wrong_entry_point/: __entry_point__.py
